# soundhash

./: .coveragerc  .dockerignore  .env.docker.example  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  AUTH_SETUP.md  CONTRIBUTING.md  DEVELOPER_PORTAL.md  DOCKER.md  Dockerfile  Dockerfile.production  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MARKETPLACE_IMPLEMENTATION_SUMMARY.md  MONETIZATION_IMPLEMENTATION_SUMMARY.md  Makefile  ONBOARDING_IMPLEMENTATION.md  README.md  ROADMAP.md  SECURITY.md  WEBHOOK_IMPLEMENTATION_SUMMARY.md  WEBHOOK_INTEGRATION.md  YOUTUBE_ACCESS_STATUS.md  YOUTUBE_OAUTH_SETUP.md  alembic.ini  benchmark_fingerprinting_report.md  codecov.yml  coverage.json  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  fresh_start.sh  mkdocs.yml  pyproject.toml  quick-start.sh  requirements-dev.txt  (+4 more)
.github/: CI_DOCUMENTATION.md  CI_QUICK_REFERENCE.md  CODEQL_TRIAGE.md  PROJECT_AUTOMATION_SETUP.md  PROJECT_BOARD_SETUP.md  PROJECT_INTEGRATION_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  ROADMAP_MASTER_ISSUE_BODY.md  copilot-instructions.md  dependabot.yml  labels.md  milestones.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  roadmap.md  task.md
.github/workflows/: ci-enhanced.yml  ci.yml  codeql.yml  deploy-docs.yml  deploy-k8s-production.yml  deploy-k8s-staging.yml  deploy-production.yml  deploy-staging.yml  docker-build.yml  pre-commit.yaml  project-automation.yml  security.yml
alembic/: README  env.py
alembic/versions/: 0643289331ca_add_email_notification_tables.py  3008b188cd54_add_multi_tenant_support.py  aca9d1b18f40_add_subscription_and_billing_tables.py  b9532a7d8c7a_add_composite_indexes_for_performance.py  c8e9d4a1f2b3_add_fingerprint_parameters_for_caching.py  ce1ffb204f19_initial_migration_with_all_models.py  ce3adb6ef385_add_compliance_tables_gdpr_ccpa_soc2.py  d4a7e3b9c2f1_add_user_and_api_key_models.py  d4e8a9b2c1f5_add_onboarding_tables.py  e0ae37366ae4_merge_performance_and_user_api_heads.py  e5f8a2b3d4c1_add_performance_optimization_indexes.py  ef282c9b1cb3_add_enterprise_sso_tables.py  f1a2b3c4d5e6_add_webhook_system_tables.py  f78a03bf92c3_merge_three_heads.py  m1a2b3c4d5e6_add_monetization_tables.py
client-sdk/: README.md  soundhash.js  soundhash_client.py
config/: __init__.py  logging_config.py  settings.py  tenant_settings.py
docker/: init-db.sql  manage.sh
docs/: ALERTING_RUNBOOK.md  API.md  AUTH_SETUP.md  BACKUP_AUTOMATION.md  BACKUP_SYSTEM.md  BENCHMARKING.md  BOTS.md  CACHING_IMPLEMENTATION.md  CDN_EDGE_SUMMARY.md  DATABASE_MIGRATIONS.md  DATABASE_SESSION_MANAGEMENT.md  DISASTER_RECOVERY_RUNBOOK.md  INSTALL.md  MARKETPLACE_API.md  MIGRATION_VALIDATION_SOLUTION.md  MONITORING.md  OBSERVABILITY.md  OBSERVABILITY_SETUP.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  QUERY_PERFORMANCE.md  QUICKSTART_WEBSOCKET.md  README.md  ROADMAP.md  SECURITY.md  SIMILARITY_TUNING.md  SSO_INTEGRATION.md  TYPING.md  WEBHOOKS.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  YOUTUBE_ACCESS_STATUS.md  YOUTUBE_OAUTH_SETUP.md  billing_integration.md  cdn-architecture.txt  cdn-deployment.md  database-performance.md  database_session_management.md  email-system.md  index.md  multi-tenant-architecture.md  (+2 more)
docs/api/: DEVELOPER_TOOLS.md  GETTING_STARTED.md  admin.md  authentication.md  changelog.md  channels.md  developer-portal.md  fingerprints.md  index.md  matches.md  rate-limits.md  reference.md  videos.md
docs/architecture/: components.md  database-schema.md  fingerprinting.md  index.md  overview.md  performance.md
docs/deployment/: DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  cloud-providers.md  docker.md  helm.md  index.md  kubernetes.md  production-checklist.md  scaling.md  terraform.md
docs/development/: code-style.md  contributing.md  index.md  setup.md  testing.md
docs/getting-started/: configuration.md  first-match.md  index.md  installation.md  quick-start.md
docs/guides/: bots.md  index.md  ingestion.md  marketplace-buyer-guide.md  marketplace-seller-guide.md  matching.md  processing.md  youtube-setup.md
docs/javascripts/: extra.js
docs/reference/: cli-commands.md  configuration.md  faq.md  index.md  troubleshooting.md
docs/scripts/: gen_api_docs.py
docs/security/: DDOS_PROTECTION.md  README.md  SECURITY_SUMMARY.md
docs/stylesheets/: extra.css
examples/: README.md  advanced_fingerprinting_demo.py  billing_example.py  simple_demo.py  web_demo.html
frontend/: .env.local.example  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  INTEGRATION.md  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
k8s/: README.md  cert-manager.yaml  configmap.yaml  deployment.yaml  grafana.yaml  hpa.yaml  ingress.yaml  jaeger.yaml  loki.yaml  migration-job.yaml  monitoring-namespace.yaml  namespace.yaml  pgbouncer.yaml  prometheus.yaml  pvc.yaml  redis.yaml  secrets.yaml.template  service.yaml
monitoring/: README.md
scripts/: add_issues_to_project.py  auth_helper.py  backup_database.py  backup_encryption.py  benchmark_fingerprinting.py  benchmark_performance.py  check_migrations.py  cleanup_data.py  compare_benchmarks.py  data_migration.py  deploy.sh  disaster_recovery.py  evaluate_similarity.py  example_migration_validation.py  export_openapi.py  fresh_start.py  generate_all_docs.sh  generate_code_snippets.py  generate_postman.py  generate_sdks.py  ingest_channels.py  init_db.sql  monitor_backup_health.py  observability_example.py  restore_database.py  setup_database.py  setup_youtube_api.py  start_api.py  test_alerting.py  test_query_performance.py  test_system.py  test_twitter_bot.py  test_webhook.py  validate_caching.py  wal_archiving.py
src/: __init__.py
terraform/: README.md  cloudfront.tf  eks.tf  elasticache.tf  lambda-edge.tf  main.tf  monitoring-regional.tf  outputs.tf  rds-multi-region.tf  rds.tf  route53.tf  s3.tf  terraform.tfvars.example  variables.tf  vpc.tf
tests/: README.md  conftest.py  test_logging_config.py  test_placeholder.py
(+324 files in other folders)
